horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 
@@ -342,4 +343,5 @@ footer {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
+    overflow: hidden;
 }
